--- a/IDCA.Client/View/Style/GridSplitter.xaml
+++ b/IDCA.Client/View/Style/GridSplitter.xaml
@@ -5,11 +5,15 @@
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Window.BorderBrush}"/>
+        <Setter Property="AllowDrop" Value="False"/>
+        <Setter Property="IsEnabled" Value="False"/>
     </Style>
     <Style x:Key="IDCA.GridSplitter.Vertical" TargetType="GridSplitter">
         <Setter Property="Width" Value="1"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Window.BorderBrush}"/>
+        <Setter Property="AllowDrop" Value="False"/>
+        <Setter Property="IsEnabled" Value="False"/>
     </Style>
 </ResourceDictionary>
