--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,21 +1,36 @@
 ﻿<mah:MetroWindow
-        x:Class="IDCA.Client.View.TableSettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:view="clr-namespace:IDCA.Client.View"
-        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingWindowViewModel}"
-        mc:Ignorable="d"
-        Height="600" 
-        Width="1000"
-        Background="{StaticResource IDCA.Brushes.Window.Background}">
+    x:Class="IDCA.Client.View.TableSettingWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:view="clr-namespace:IDCA.Client.View"
+    xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+    d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingWindowViewModel}"
+    mc:Ignorable="d"
+    Height="800" 
+    Width="1200"
+    Background="{StaticResource IDCA.Brushes.Window.Background}"
+    ResizeMode="CanResizeWithGrip">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <DataTemplate x:Key="IDCA.ViewModel.TableSetting" DataType="{x:Type viewmodel:TableSettingTreeNode}">
+            <view:TableSettingView DataContext="{Binding ViewModel}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="IDCA.ViewModel.HeaderSetting" DataType="{x:Type viewmodel:TableSettingTreeNode}">
+            <view:HeaderSettingView DataContext="{Binding ViewModel}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="IDCA.ViewModel.OverView" DataType="{x:Type viewmodel:TableSettingTreeNode}">
+            <view:OverviewControl DataContext="{Binding ViewModel}"/>
+        </DataTemplate>
+        <viewmodel:TableSettingWindowDataTemplateSelector
+            x:Key="IDCA.ViewModel.Selector"
+            HeaderSettingTemplate="{StaticResource ResourceKey=IDCA.ViewModel.HeaderSetting}"
+            TableSettingTemplate="{StaticResource ResourceKey=IDCA.ViewModel.TableSetting}"
+            OverViewTemplate="{StaticResource ResourceKey=IDCA.ViewModel.OverView}"/>
     </Window.Resources>
     
     <Grid>
@@ -29,7 +44,7 @@
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             
             <StackPanel Grid.Column="0" Orientation="Horizontal">
@@ -105,25 +120,30 @@
 
             </StackPanel>
 
-            <Button Grid.Column="1"
-                    Height="40"
-                    Width="60"
-                    Cursor="Hand"
-                    Command="{Binding ExecuteCommand}">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Grid Width="60"
-                              Height="40"
-                              Background="#00000000">
-                            <icon:PackIconMaterialDesign Kind="PlayArrow"
-                                                         Width="20"
-                                                         Height="20"
-                                                         VerticalAlignment="Center"
-                                                         HorizontalAlignment="Center"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                <Button Height="40"
+                        Width="60"
+                        Command="{Binding ShowSettingWindowCommand}"
+                        Style="{StaticResource IDCA.Button.Setting}"/>
+                <Button Height="40"
+                        Width="60"
+                        Cursor="Hand"
+                        Command="{Binding ExecuteCommand}">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid Width="60"
+                                  Height="40"
+                                  Background="#00000000">
+                                <icon:PackIconMaterialDesign Kind="PlayArrow"
+                                                             Width="20"
+                                                             Height="20"
+                                                             VerticalAlignment="Center"
+                                                             HorizontalAlignment="Center"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </StackPanel>
 
         </Grid>
 
@@ -185,7 +205,9 @@
                 </TreeView>
             </Border>
 
-            <view:OverviewControl Grid.Column="1"
+            <ContentPresenter Grid.Column="1" Content="{Binding SelectedNode}" ContentTemplateSelector="{StaticResource IDCA.ViewModel.Selector}"/>
+
+            <!--<view:OverviewControl Grid.Column="1"
                                   DataContext="{Binding SelectedNode.OverviewViewModel}"
                                   Visibility="{Binding Node.IsOverView, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             
@@ -195,7 +217,7 @@
             
             <view:TableSettingView Grid.Column="1" 
                                    DataContext="{Binding SelectedNode.TableViewModel}"
-                                   Visibility="{Binding Node.IsTableView, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                   Visibility="{Binding Node.IsTableView, Converter={StaticResource BooleanToVisibilityConverter}}"/>-->
 
         </Grid>
     </Grid>
