将TableSettingView部分的轴相关配置移入AxisSettingWindow中进行配置

--- a/IDCA.Client/View/Style/DataGrid.xaml
+++ b/IDCA.Client/View/Style/DataGrid.xaml
@@ -24,5 +24,6 @@
         <Setter Property="RowHeaderWidth" Value="20"/>
         <Setter Property="ColumnHeaderHeight" Value="35"/>
         <Setter Property="AllowDrop" Value="True"/>
+        <Setter Property="VirtualizingPanel.IsVirtualizing" Value="True"/>
     </Style>
 </ResourceDictionary>
