--- a/IDCA.Client/App.xaml
+++ b/IDCA.Client/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="View/Style/DataGrid.xaml"/>
                 <ResourceDictionary Source="View/Style/MetroTheme.xaml"/>
                 <ResourceDictionary Source="View/Style/PopupButton.xaml"/>
+                <ResourceDictionary Source="View/Style/TableSettingContentPresenter.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
